--- a/bandcamp_librarian/flask/Dockerfile
+++ b/bandcamp_librarian/flask/Dockerfile
@@ -1,9 +1,10 @@
-FROM python:3.6-slim
+FROM python:3.8-slim
 
 WORKDIR /app
 
 COPY requirements.txt /app
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
+RUN python -m spacy download en_core_web_sm
 
 Add . /app
 
