--- a/bandcamp_librarian/flask/Dockerfile
+++ b/bandcamp_librarian/flask/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY requirements.txt /app
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
-RUN python -m spacy download en_core_web_sm
+RUN python -m spacy download en_core_web_md
 
 Add . /app
 
